Worked up to search. GET not recognizing q or query. Defaulting to chart

--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -1,6 +1,6 @@
 <div class="search-bar form-inline">
-  <input class="form-control" type="text" />
-  <button class="btn">
+  <input ng-model="$ctrl.searchQuery" class="form-control" type="text" />
+  <button class="btn" ng-click="$ctrl.search($ctrl.searchQuery, $ctrl.result)">
     <span class="glyphicon glyphicon-search"></span>
   </button>
 </div>
