--- a/src/templates/videoList.html
+++ b/src/templates/videoList.html
@@ -1,7 +1,3 @@
 <ul class="video-list">
-  <video-list-entry><h5><em>videoListEntry</em> component goes here</h5></video-list-entry>
-  <video-list-entry><h5><em>videoListEntry</em> component goes here</h5></video-list-entry>
-  <video-list-entry><h5><em>videoListEntry</em> component goes here</h5></video-list-entry>
-  <video-list-entry><h5><em>videoListEntry</em> component goes here</h5></video-list-entry>
-  <video-list-entry><h5><em>videoListEntry</em> component goes here</h5></video-list-entry>
+  <video-list-entry on-click="$ctrl.onClick" ng-repeat="video in $ctrl.videos track by $index" index="$index" video="video"><h5><em>videoListEntry</em> component goes here</h5></video-list-entry>
 </ul>
