--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -1,12 +1,12 @@
 <div id="app container">
   <nav class="navbar">
     <div class="col-md-6 col-md-offset-3">
-      <search search="$ctrl.search" result="$ctrl.searchResults.bind(this)"><h5><em>search</em> component goes here</h5></search>
+      <search ng-init="$ctrl.search()" result="$ctrl.searchResults"><h5><em>search</em> component goes here</h5></search>
     </div>
   </nav>
   <div class="row">
     <div class="col-md-7">
-      <video-player video="$ctrl.currentVideo"><h5><em>videoPlayer</em> component goes here</h5></video-player>
+      <video-player video="$ctrl.currentVideo"><h5><em>videoPlayer</em> loading...</h5></video-player>
     </div>
     <div class="col-md-5">
       <video-list videos="$ctrl.videos" on-click="$ctrl.selectVideo"><h5><em>videoList</em> component goes here</h5></video-list>
