--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -1,6 +1,6 @@
 <div class="search-bar form-inline">
   <input ng-model="$ctrl.searchQuery" class="form-control" type="text" />
-  <button class="btn" ng-click="$ctrl.search($ctrl.searchQuery, $ctrl.result)">
+  <button class="btn" ng-click="$ctrl.service.search($ctrl.searchQuery, $ctrl.result)">
     <span class="glyphicon glyphicon-search"></span>
   </button>
 </div>
