--- a/src/templates/videoPlayer.html
+++ b/src/templates/videoPlayer.html
@@ -1,9 +1,12 @@
-<div class="video-player">
-  <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" ng-src="{{'https://www.youtube.com/embed/'+$ctrl.video.id.videoId}}" allowFullScreen></iframe>
-  </div>
-  <div class="video-player-details">
-    <h3>{{$ctrl.video.snippet.title}}</h3>
-    <div>{{$ctrl.video.snippet.description}}</div>
+<div class="video-player" ng-switch="$ctrl.video">
+  <div ng-switch-when="undefined">Please wait</div>
+  <div ng-switch-default>
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" ng-src="{{'https://www.youtube.com/embed/'+$ctrl.video.id.videoId}}" allowFullScreen></iframe>
+    </div>
+    <div class="video-player-details">
+      <h3>{{$ctrl.video.snippet.title}}</h3>
+      <div>{{$ctrl.video.snippet.description}}</div>
+    </div>
   </div>
 </div>
